--- a/.bluemix/pipeline.yml
+++ b/.bluemix/pipeline.yml
@@ -11,96 +11,78 @@ stages:
   jobs:
   - name: Build
     type: builder
-    artifact_dir: ''
-    build_type: gradle
-    script: |-
-      #!/bin/bash
-      # The default Gradle version is 1.12
-      # To use Gradle 2.9, uncomment the following line:
-      #export PATH="$GRADLE2_HOME/bin:$PATH"
-      export JAVA_HOME=~/java8
-      ./gradlew build
-  - name: Build Docker Image
-    type: builder
     extension_id: ibm.devops.services.pipeline.container.builder
     target:
       region_id: ${REGION}
       organization: ${ORG}
       space: ${SPACE}
-    IMAGE_NAME: ${IMAGE_NAME}
-    USE_CACHED_LAYERS: 'true'
     COMMAND: |-
-        #!/bin/bash
-        # The following colors have been defined to help with presentation of logs: green, red, label_color, no_color.  
-        log_and_echo "$LABEL" "Starting build script"
-        
-        export JAVA_HOME=~/java8
-        
-        ./gradlew docker
-        
-        cp -r docker/* .
-        
-        SPACE=$($IC_COMMAND info|grep 'Bluemix Space'|awk '{print $NF}'|sed "s/\(.*\)\((.*\)/\1/")
-        IMAGE_NAME=$(echo $IMAGE_NAME|sed "s/-$SPACE//")
-        REGISTRY_URL=${CCS_REGISTRY_HOST}/${NAMESPACE}
-        FULL_REPOSITORY_NAME=${REGISTRY_URL}/${IMAGE_NAME}:${SPACE}
-        
-        # The IBM Container BM Containers plug-in (cf ic), Git client (git), and IDS Inventory CLI (ids-inv) have been installed.
-        # Based on the organization and space selected in the Job credentials are in place for both IBM Container Service and IBM Bluemix 
-        #####################
-        # Run unit tests    #
-        #####################
-        log_and_echo "$LABEL" "No unit tests cases have been checked in"
-        
-        SPACE=$($IC_COMMAND info|grep 'Bluemix Space'|awk '{print $NF}'|sed "s/\(.*\)\((.*\)/\1/")
-        IMAGE_NAME=$(echo $IMAGE_NAME|sed "s/-$SPACE//")
-        REGISTRY_URL=${CCS_REGISTRY_HOST}/${NAMESPACE}
-        FULL_REPOSITORY_NAME=${REGISTRY_URL}/${IMAGE_NAME}:${SPACE}
-        
-        ######################################
-        # Build Container via Dockerfile     #
-        ######################################
-        
-        # REGISTRY_URL=${CCS_REGISTRY_HOST}/${NAMESPACE}
-        # FULL_REPOSITORY_NAME=${REGISTRY_URL}/${IMAGE_NAME}:${APPLICATION_VERSION}
-        # If you wish to receive slack notifications, set SLACK_WEBHOOK_PATH as a property on the stage.
-        
-        if [ -f Dockerfile ]; then 
-            log_and_echo "$LABEL" "Building ${FULL_REPOSITORY_NAME}"
-            ${EXT_DIR}/utilities/sendMessage.sh -l info -m "New container build requested for ${FULL_REPOSITORY_NAME}"
-            # build image
-            BUILD_COMMAND=""
-            if [ "${USE_CACHED_LAYERS}" == "true" ]; then 
-                BUILD_COMMAND="build --pull --tag ${FULL_REPOSITORY_NAME} ${WORKSPACE}"
-                ice_retry ${BUILD_COMMAND}
-                RESULT=$?
-            else 
-                BUILD_COMMAND="build --no-cache --tag ${FULL_REPOSITORY_NAME} ${WORKSPACE}"
-                ice_retry ${BUILD_COMMAND}
-                RESULT=$?
-            fi 
-        
-            if [ $RESULT -ne 0 ]; then
-                log_and_echo "$ERROR" "Error building image"
-                ice_retry info 
-                ice_retry images
-                ${EXT_DIR}/print_help.sh
-                ${EXT_DIR}/utilities/sendMessage.sh -l bad -m "Container build of ${FULL_REPOSITORY_NAME} failed. $(get_error_info)"
-                exit 1
-            else
-                log_and_echo "$SUCCESSFUL" "Container build of ${FULL_REPOSITORY_NAME} was successful"
-                ${EXT_DIR}/utilities/sendMessage.sh -l good -m "Container build of ${FULL_REPOSITORY_NAME} was successful"
-            fi  
-        else 
-            log_and_echo "$ERROR" "Dockerfile not found in project"
-            ${EXT_DIR}/utilities/sendMessage.sh -l bad -m "Failed to get Dockerfile. $(get_error_info)"
-            exit 1
-        fi  
-        
-        ######################################################################################
-        # Copy any artifacts that will be needed for deployment and testing to $WORKSPACE    #
-        ######################################################################################
-        echo "IMAGE_NAME=${FULL_REPOSITORY_NAME}" >> $ARCHIVE_DIR/build.properties
+      #!/bin/bash
+      # The following colors have been defined to help with presentation of logs: green, red, label_color, no_color.  
+      log_and_echo "$LABEL" "Starting build script"
+      
+      export JAVA_HOME=~/java8
+      
+      ./gradlew build docker
+      
+      cp -r docker/* .
+      
+      # The IBM Container BM Containers plug-in (cf ic), Git client (git), and IDS Inventory CLI (ids-inv) have been installed.
+      # Based on the organization and space selected in the Job credentials are in place for both IBM Container Service and IBM Bluemix 
+      #####################
+      # Run unit tests    #
+      #####################
+      log_and_echo "$LABEL" "No unit tests cases have been checked in"
+      
+      SPACE=$($IC_COMMAND info|grep 'Bluemix Space'|awk '{print $NF}'|sed "s/\(.*\)\((.*\)/\1/")
+      IMAGE_NAME=$(echo $IMAGE_NAME|sed "s/-$SPACE//")
+      REGISTRY_URL=${CCS_REGISTRY_HOST}/${NAMESPACE}
+      FULL_REPOSITORY_NAME=${REGISTRY_URL}/${IMAGE_NAME}:${SPACE}
+      
+      ######################################
+      # Build Container via Dockerfile     #
+      ######################################
+      
+      # REGISTRY_URL=${CCS_REGISTRY_HOST}/${NAMESPACE}
+      # FULL_REPOSITORY_NAME=${REGISTRY_URL}/${IMAGE_NAME}:${APPLICATION_VERSION}
+      # If you wish to receive slack notifications, set SLACK_WEBHOOK_PATH as a property on the stage.
+      
+      if [ -f Dockerfile ]; then 
+          log_and_echo "$LABEL" "Building ${FULL_REPOSITORY_NAME}"
+          ${EXT_DIR}/utilities/sendMessage.sh -l info -m "New container build requested for ${FULL_REPOSITORY_NAME}"
+          # build image
+          BUILD_COMMAND=""
+          if [ "${USE_CACHED_LAYERS}" == "true" ]; then 
+              BUILD_COMMAND="build --pull --tag ${FULL_REPOSITORY_NAME} ${WORKSPACE}"
+              ice_retry ${BUILD_COMMAND}
+              RESULT=$?
+          else 
+              BUILD_COMMAND="build --no-cache --tag ${FULL_REPOSITORY_NAME} ${WORKSPACE}"
+              ice_retry ${BUILD_COMMAND}
+              RESULT=$?
+          fi 
+      
+          if [ $RESULT -ne 0 ]; then
+              log_and_echo "$ERROR" "Error building image"
+              ice_retry info 
+              ice_retry images
+              ${EXT_DIR}/print_help.sh
+              ${EXT_DIR}/utilities/sendMessage.sh -l bad -m "Container build of ${FULL_REPOSITORY_NAME} failed. $(get_error_info)"
+              exit 1
+          else
+              log_and_echo "$SUCCESSFUL" "Container build of ${FULL_REPOSITORY_NAME} was successful"
+              ${EXT_DIR}/utilities/sendMessage.sh -l good -m "Container build of ${FULL_REPOSITORY_NAME} was successful"
+          fi  
+      else 
+          log_and_echo "$ERROR" "Dockerfile not found in project"
+          ${EXT_DIR}/utilities/sendMessage.sh -l bad -m "Failed to get Dockerfile. $(get_error_info)"
+          exit 1
+      fi  
+      
+      ######################################################################################
+      # Copy any artifacts that will be needed for deployment and testing to $WORKSPACE    #
+      ######################################################################################
+      echo "IMAGE_NAME=${FULL_REPOSITORY_NAME}" >> $ARCHIVE_DIR/build.properties
 - name: DEPLOY
   inputs:
   - type: job
@@ -119,12 +101,6 @@ stages:
   - name: DESIRED_INSTANCES
     value: ${DESIRED_INSTANCES}
     type: text
-  - name: APP_NAME
-    value: ${APP_NAME}
-    type: text
-  - name: MEMORY
-    value: ${MEMORY}
-    type: text
   - name: CONTAINER_SIZE
     value: ${MEMORY}
     type: text
@@ -133,9 +109,6 @@ stages:
     type: text
   - name: NEW_RELIC_LICENSE_KEY
     value: ${NEW_RELIC_LICENSE}
-    type: text
-  - name: CTXPATH
-    value: ${CTXPATH}
     type: text
   jobs:
   - name: Deploy Container
@@ -146,7 +119,7 @@ stages:
       organization: ${ORG}
       space: ${SPACE}
     PORT: ${PORT}
-    OPTIONAL_ARGS: -m ${MEMORY}
+    OPTIONAL_ARGS: 
     DEPLOY_TYPE: red_black
     CONTAINER_NAME: ${NAME}
     COMMAND: |-
@@ -182,33 +155,10 @@ stages:
         # the code can be found in git_util.sh at https://github.com/Osthanes/container_deployer
         git_retry clone https://github.com/Osthanes/deployscripts.git deployscripts
         
-        
-        # You can deploy your Image as either a single Container or as a Container 
-        # Group.  A Container Group deploys a number of containers to enhance
-        # scalability or reliability.  By default we will deploy as a single 
-        # container.  To switch to a group deploy, comment out the line below
-        # containing deploycontainer.sh and uncomment the line for deploygroup.sh
-        
-        # Deploy with containers:
-        # Optional environment properties (can be set directly in this script, or defined as environment properties):
-        #      NAME              Value         Description
-        #   =============      =========     ==============
-        #   BIND_TO             String       Specify a Bluemix application name that whose bound services you wish to make available to the container.  By default this is not set.
-        #   CONTAINER_SIZE      String       Specify container size: pico (64), nano (128), micro (256), tiny (512), small (1024), medium (2048),
-        #                                                            large (4096), x-large (8192), 2x-large (16384).
-        #                                    Default is micro (256).
-        #   CONCURRENT_VERSIONS Number       Number of versions of this container to leave active.  
-        #                                    Default is 1
-        #
-        #/bin/bash deployscripts/deploycontainer.sh
-        
-        
         OPTIONAL_ARGS="${OPTIONAL_ARGS} \
               -e NEW_RELIC_LICENSE_KEY=${NEW_RELIC_LICENSE_KEY} \
               -e eureka.client.fetchRegistry=true \
               -e eureka.client.registerWithEureka=true \
-              -e "spring.application.name=${APP_NAME}" \
-              -e "server.context-path=${CTXPATH}" \
               -e "eureka.client.serviceUrl.defaultZone=${EUREKA_REGISTRY_URL}" \
               -e "spring.application.cloudant.username=${cloudant_username}" \
               -e "spring.application.cloudant.password=${cloudant_password}" \
