--- a/.bluemix/pipeline.yml
+++ b/.bluemix/pipeline.yml
@@ -16,6 +16,8 @@ stages:
       region_id: ${REGION}
       organization: ${ORG}
       space: ${SPACE}
+    USE_CACHED_LAYERS: 'true'
+    IMAGE_NAME: ${NAME}
     COMMAND: |-
       #!/bin/bash
       # The following colors have been defined to help with presentation of logs: green, red, label_color, no_color.  
