--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,10 @@ dependencyManagement {
 dependencies {
     compile('org.springframework.cloud:spring-cloud-starter-eureka')
     compile('org.springframework.cloud:spring-cloud-starter-hystrix')
+    compile('org.springframework.security.oauth:spring-security-oauth2')
+    compile('org.springframework.security:spring-security-jwt')
+    // tag::jetty[]
+    compile('org.springframework.boot:spring-boot-starter-security')
     // tag::jetty[]
     compile("org.springframework.boot:spring-boot-starter-web") {
         exclude module: "spring-boot-starter-tomcat"
