--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -24,15 +24,19 @@ podTemplate(label: 'mypod',
                 sh """
                 #!/bin/bash
 
+                export REGISTRY_NAMESPACE=chrisking
+
                 ./gradlew docker 
-                cd docker && docker build -t registry.ng.bluemix.net/chrisking/micro-customer:${env.BUILD_NUMBER} .
+                cd docker && docker build -t registry.ng.bluemix.net/${env.REGISTRY_NAMESPACE}/micro-customer:${env.BUILD_NUMBER} .
                 """
             }
             stage ('Push Docker Image to Registry') {
                 sh """
                 #!/bin/bash
+
+                export REGISTRY_NAMESPACE=chrisking
+
                 # Install plugins
-                bx plugin install container-service -r Bluemix
                 bx plugin install container-registry -r Bluemix
 
                 # TODO: use API key instead of password?
@@ -45,17 +49,49 @@ podTemplate(label: 'mypod',
                 -o `cat /var/run/secrets/bx-auth-secret/CF_ORG` \
                 -s `cat /var/run/secrets/bx-auth-secret/CF_SPACE`
 
-                bx cs init
+                # initialize container registry plugin
                 bx cr login
 
-                docker push registry.ng.bluemix.net/chrisking/micro-customer-jkwong:${env.BUILD_NUMBER}
+                # push image into bluemix private registry
+                docker push registry.ng.bluemix.net/${env.REGISTRY_NAMESPACE}/micro-customer-jkwong:${env.BUILD_NUMBER}
                 """
             }
-            stage ('Deploy to Kubernetes') {
+            stage ('Bind services to cluster') {
                 sh """
                 #!/bin/bash
 
-                yaml w customer.yml spec.template.spec.containers[0].image registry.ng.bluemix.net/chrisking/micro-customer-jkwong:${env.BUILD_NUMBER} > deployment.yml
+                # Install plugins
+
+                bx plugin install container-service -r Bluemix
+                bx cs init
+
+                # find cloudant service
+                export CLOUDANT_SVC_NAME=`bx service list | grep cloudantNoSQLDB | sed -e 's/[ ]*cloudantNoSQLDB.*$//'`
+
+                # bind it to kube secret
+                export KUBE_CLUSTER_NAME=`kubectl config view | yaml r - current-context`
+                bx cs cluster-service-bind ${env.KUBE_CLUSTER_NAME} default ${env.CLOUDANT_SVC_NAME}
+
+                """
+            }
+            stage ('Deploy pod to Kubernetes') {
+                sh """
+                #!/bin/bash
+
+                CLOUDANT_SVC_NAME=`bx service list | grep cloudantNoSQLDB | sed -e 's/[ ]*cloudantNoSQLDB.*$//'`
+
+                # TODO: get the secret name from the service name?
+                export CLOUDANT_SECRET_NAME="binding-refarch-cloudantdb"
+                export REGISTRY_NAMESPACE=chrisking
+
+                cat customer.yaml | \
+                yaml w - spec.template.spec.containers[0].image registry.ng.bluemix.net/${env.REGISTRY_NAMESPACE}/micro-customer-jkwong:${env.BUILD_NUMBER} | \
+                yaml w - spec.template.spec.containers[0].volumeMounts[0].mountPath /opt/binding-refarch-cloudantdb | \
+                yaml w - spec.template.spec.containers[0].volumeMounts[0].name binding-refarch-cloudantdb | \
+                yaml w - spec.template.spec.volumes[0].name binding-refarch-cloudantdb | \
+                yaml w - spec.template.spec.volumes[0].secret.defaultMode 420 | \
+                yaml w - spec.template.spec.volumes[0].secret.secretName ${env.CLOUDANT_SECRET_NAME} \
+                > deployment.yml
 
                 # TODO: rolling update
                 kubectl --token=`cat /var/run/secrets/kubernetes.io/serviceaccount/token` create -f deployment.yml
