--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -53,7 +53,7 @@ podTemplate(label: 'mypod',
                 bx cr login
 
                 # push image into bluemix private registry
-                docker push registry.ng.bluemix.net/${env.REGISTRY_NAMESPACE}/micro-customer:${env.BUILD_NUMBER}
+                docker push registry.ng.bluemix.net/\${REGISTRY_NAMESPACE}/micro-customer:${env.BUILD_NUMBER}
                 """
             }
             stage ('Bind services to cluster') {
@@ -68,15 +68,15 @@ podTemplate(label: 'mypod',
                 # find cloudant service
                 export CLOUDANT_SVC_NAME=`bx service list | grep cloudantNoSQLDB | sed -e 's/[ ]*cloudantNoSQLDB.*\$//'`
 
-                if [ -z "${env.CLOUDANT_SVC_NAME}" ]; then
+                if [ -z "\${CLOUDANT_SVC_NAME}" ]; then
                   echo "No Cloudant service found!"
                   exit 1
                 fi
 
                 # bind it to kube secret
-                echo "Binding cloudant service ${env.CLOUDANT_SVC_NAME} to cluster ${env.KUBE_CLUSTER_NAME}
-                export KUBE_CLUSTER_NAME=`kubectl config view | yaml r - current-context`
-                bx cs cluster-service-bind ${env.KUBE_CLUSTER_NAME} default ${env.CLOUDANT_SVC_NAME}
+                export KUBE_CLUSTER_NAME=`kubectl --token=`cat /var/run/secrets/kubernetes.io/serviceaccount/token` config view | yaml r - current-context`
+                echo "Binding cloudant service \${CLOUDANT_SVC_NAME} to cluster \${KUBE_CLUSTER_NAME}
+                bx cs cluster-service-bind \${KUBE_CLUSTER_NAME} default \${CLOUDANT_SVC_NAME}
 
                 """
             }
@@ -90,18 +90,18 @@ podTemplate(label: 'mypod',
                 export CLOUDANT_SECRET_NAME="binding-refarch-cloudantdb"
                 export REGISTRY_NAMESPACE=chrisking
 
-                cat customer.yaml | \
-                yaml w - spec.template.spec.containers[0].image registry.ng.bluemix.net/${env.REGISTRY_NAMESPACE}/micro-customer:${env.BUILD_NUMBER} | \
+                cat kubernetes/customer.yaml | \
+                yaml w - spec.template.spec.containers[0].image registry.ng.bluemix.net/\${REGISTRY_NAMESPACE}/micro-customer:${env.BUILD_NUMBER} | \
                 yaml w - spec.template.spec.containers[0].volumeMounts[0].mountPath /var/run/secrets/binding-refarch-cloudantdb | \
                 yaml w - spec.template.spec.containers[0].volumeMounts[0].name binding-refarch-cloudantdb | \
                 yaml w - spec.template.spec.volumes[0].name binding-refarch-cloudantdb | \
                 yaml w - spec.template.spec.volumes[0].secret.defaultMode 420 | \
-                yaml w - spec.template.spec.volumes[0].secret.secretName ${env.CLOUDANT_SECRET_NAME} \
+                yaml w - spec.template.spec.volumes[0].secret.secretName \${CLOUDANT_SECRET_NAME} \
                 > deployment.yml
 
                 # TODO: rolling update
                 kubectl --token=`cat /var/run/secrets/kubernetes.io/serviceaccount/token` create -f deployment.yml
-                kubectl --token=`cat /var/run/secrets/kubernetes.io/serviceaccount/token` create -f customer-service.yml
+                kubectl --token=`cat /var/run/secrets/kubernetes.io/serviceaccount/token` create -f kubernetes/customer-service.yml
                 """
             }
             stage ('Clean up old images') {
