--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -4,7 +4,7 @@ podTemplate(label: 'mypod',
     containers: [
         containerTemplate(
             name: 'gradle',
-            image: 'fabiogomezdiaz/bc-jenkins-slave:v9',
+            image: 'fabiogomezdiaz/bc-jenkins-slave:v10',
             alwaysPullImage: true,
             ttyEnabled: true,
             command: 'cat'
@@ -27,7 +27,8 @@ podTemplate(label: 'mypod',
                 export REGISTRY_NAMESPACE=chrisking
 
                 ./gradlew docker 
-                cd docker && docker build -t registry.ng.bluemix.net/${env.REGISTRY_NAMESPACE}/micro-customer:${env.BUILD_NUMBER} .
+                cd docker 
+                docker build -t registry.ng.bluemix.net/\${REGISTRY_NAMESPACE}/micro-customer:${env.BUILD_NUMBER} .
                 """
             }
             stage ('Push Docker Image to Registry') {
