--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -48,8 +48,7 @@ podTemplate(label: 'mypod',
                 -p `cat /var/run/secrets/bx-auth-secret/CF_PASSWORD` \
                 -c `cat /var/run/secrets/bx-auth-secret/CF_ACCOUNT` \
                 -o `cat /var/run/secrets/bx-auth-secret/CF_ORG` \
-                -s jkwong-dev
-                # -s `cat /var/run/secrets/bx-auth-secret/CF_SPACE`
+                -s `cat /var/run/secrets/bx-auth-secret/CF_SPACE`
 
                 # initialize container registry plugin
                 bx cr login
