--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -62,8 +62,7 @@ podTemplate(label: 'mypod',
                 #!/bin/bash
 
                 KUBE_TOKEN=`cat /var/run/secrets/kubernetes.io/serviceaccount/token`
-                kubectl --token=\${KUBE_TOKEN} config view 
-                KUBE_CLUSTER_NAME=`kubectl --token=\${KUBE_TOKEN} config view | yaml - r current-context`
+                KUBE_CLUSTER_NAME=`cat /var/run/secrets/bx-auth-secret/CLUSTER_NAME`
 
                 # Install plugins
                 bx plugin install container-service -r Bluemix
