--- a/kubernetes/customer.yaml
+++ b/kubernetes/customer.yaml
@@ -17,8 +17,10 @@ spec:
         image: registry.ng.bluemix.net/chrisking/us-micro-customer:jkwong-dev
         imagePullPolicy: Always
         volumeMounts:
-        - mountPath: /opt/binding-refarch-cloudantdb
+        - mountPath: /var/run/secrets/binding-refarch-cloudantdb
           name: binding-refarch-cloudantdb
+        - mountPath: /var/run/secrets/hs256-key
+          name: hs256-key
         ports:
         - containerPort: 8080
       volumes:
@@ -26,4 +28,7 @@ spec:
         secret:
           defaultMode: 420
           secretName: binding-refarch-cloudantdb
-...
+      - name: hs256-key
+        secret:
+          defaultMode: 420
+          secretName: hs256-key
