--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -24,7 +24,7 @@ podTemplate(label: 'mypod',
                 sh """
                 #!/bin/bash
 
-                export REGISTRY_NAMESPACE=chrisking
+                REGISTRY_NAMESPACE=chrisking
 
                 ./gradlew docker 
                 cd docker 
@@ -35,7 +35,7 @@ podTemplate(label: 'mypod',
                 sh """
                 #!/bin/bash
 
-                export REGISTRY_NAMESPACE=chrisking
+                REGISTRY_NAMESPACE=chrisking
 
                 # Install plugins
                 bx plugin install container-registry -r Bluemix
@@ -80,16 +80,24 @@ podTemplate(label: 'mypod',
                 echo "Binding cloudant service \${CLOUDANT_SVC_NAME} to cluster \${KUBE_CLUSTER_NAME}"
                 bx cs cluster-service-bind \${KUBE_CLUSTER_NAME} default \${CLOUDANT_SVC_NAME}
 
+
+                hs256_key=`kubectl --token=\${KUBE_TOKEN} get secrets | grep "hs256-key" | awk '{print \$1}'`
+                if [ -z "\${hs256_key}" ]; then
+                    echo "Creating HS256 shared secret ..."
+                    kubectl --token=\${KUBE_TOKEN} create secret generic hs256-key --from-literal=key=`cat /dev/urandom | env LC_CTYPE=C tr -dc 'a-zA-Z0-9' | fold -w 256 | head -n 1 | xargs echo -n`
+
+                fi
+
                 """
             }
             stage ('Deploy pod to Kubernetes') {
                 sh """
                 #!/bin/bash
 
-                export CLOUDANT_SVC_NAME=`bx service list | grep cloudantNoSQLDB | sed -e 's/[ ]*cloudantNoSQLDB.*\$//'`
+                CLOUDANT_SVC_NAME=`bx service list | grep cloudantNoSQLDB | sed -e 's/[ ]*cloudantNoSQLDB.*\$//'`
 
                 # TODO: get the secret name from the service name?
-                CLOUDANT_SECRET_NAME="binding-refarch-cloudantdb"
+                CLOUDANT_SECRET_NAME="binding-\${CLOUDANT_SVC_NAME}"
                 REGISTRY_NAMESPACE=chrisking
                 token=`cat /var/run/secrets/kubernetes.io/serviceaccount/token`
                 image_name=registry.ng.bluemix.net/\${REGISTRY_NAMESPACE}/micro-customer:${env.BUILD_NUMBER}
