--- a/chart/bc-customer/templates/service.yaml
+++ b/chart/bc-customer/templates/service.yaml
@@ -1,8 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Chart.Name }}
+  name: customer-service
   labels:
+    app: bluecompute
+    tier: backend
+    micro: customer
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
 spec:
   type: {{ .Values.service.type }}
