fix service label selector

--- a/chart/bc-customer/templates/service.yaml
+++ b/chart/bc-customer/templates/service.yaml
@@ -15,4 +15,6 @@ spec:
     protocol: TCP
     name: {{ .Values.service.name }}
   selector:
-    app: {{ template "fullname" . }}
+    app: bluecompute
+    tier: backend
+    micro: customer
