--- a/chart/bluecompute-customer/templates/deployment.yaml
+++ b/chart/bluecompute-customer/templates/deployment.yaml
@@ -28,8 +28,16 @@ spec:
           name: hs256-key
         ports:
         - containerPort: {{ .Values.service.internalPort }}
-        resources:
-{{ toYaml .Values.resources | indent 12 }}
+        livenessProbe:
+          httpGet:
+            path: /micro/check
+            port: {{ .Values.service.internalPort }}
+          initialDelaySeconds: 60
+        readinessProbe:
+          httpGet:
+            path: /micro/check
+            port: {{ .Values.service.internalPort }}
+          initialDelaySeconds: 60
       volumes:
       - name: binding-refarch-cloudantdb
         secret:
