--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,7 @@ spring:
      name: customer-microservice
      
      cloudant:
+        protocol: https
         username: 
         password: 
         host: 
